feat(pom_xml) : add excludes for jacoco